<resources>
    <string name="app_name">"Questionnaires"</string>
    <string name="ms_prev">"BACK"</string>
    <string name="ms_next">"NEXT"</string>
    <string name="ms_end">"FINISH"</string>
    <string name="ms_continue">"continue"</string>
    <string name="ms_optional">"Optional"</string>
    <string name="ms_text_step">"Step $current of $total"</string>
    <string name="click">"Click"</string>
    <string name="can_skip">"Skip"</string>
    <string name="housing_situation">"Living situation"</string>
    <string name="insurance">"Insurance"</string>
    <string name="work_or_school">"Work / School"</string>
    <string name="transport">"Transport"</string>
    <string name="childcare">"Childcare"</string>
    <string name="enougt_power">"Not stressed"</string>
    <string name="lot_of_problems">"Stressed out"</string>
    <string name="thermometer_description">"Please select the number from (0 - 10) that describes you stress level in the last week, including felt today."</string>
    <string name="checkbox_description">"Please indicate whether you in the last week, including today had problems in one of the following areas. For 'YES' select the checkbox. For 'NO' leave the checkbox blank."</string>
    <string name="practicle_problems">"Practical problems"</string>
    <string name="family_problems">"Family problems"</string>
    <string name="partner_problems">"In dealing with the partner"</string>
    <string name="children_problems">"In dealing with the children"</string>
    <string name="emotional_problems">"Emotional problems"</string>
    <string name="carrie">"Worries"</string>
    <string name="scary">"Fears"</string>
    <string name="unhappy">"Sadness"</string>
    <string name="depressive">"Depressions"</string>
    <string name="nervous">"Nervousness"</string>
    <string name="all_day_activity">"Loss of interest in daily activities"</string>
    <string name="religious_spriritual_problems">"Spiritual / religious concerns"</string>
    <string name="god">"In relation to God"</string>
    <string name="lose_your_mind">"Loss of faith"</string>
    <string name="body_problems">"Bodily Problems"</string>
    <string name="hurts">"Pain"</string>
    <string name="ugly_feeling">"Nausea"</string>
    <string name="no_power">"Exhaustion"</string>
    <string name="sleep">"Sleeping"</string>
    <string name="motion">"Motion / mobility"</string>
    <string name="wash_dress">"Washing / Clothing"</string>
    <string name="external_appearance">"Outer appearance"</string>
    <string name="breathing">"Breathing"</string>
    <string name="mouth_inflammation">"Inflammation of the mouth"</string>
    <string name="food_nutrition">"Food / Nutrition"</string>
    <string name="digestive_disorders">"Indigestion"</string>
    <string name="constipation">"Constipation"</string>
    <string name="diarrhea">"Diarrhoea"</string>
    <string name="changes_in_pee">"Changes while peeing"</string>
    <string name="fever">"Fever"</string>
    <string name="dry_or_itchy_skin">"Dry / Itchy skin"</string>
    <string name="dry_or_stuffy_nose">"Dry / stuffy nose"</string>
    <string name="tingling_in_hands_feet">"Tingling in hands / feet"</string>
    <string name="swollen_or_bloated_feeling">"Feel puffy / swollen"</string>
    <string name="memory_or_concentration">"Memory / concentration"</string>
    <string name="sexual_problems">"Sexual Problems"</string>
    <string name="is_it_difficult_to_be_physically_active">Bereitet es Ihnen Schwierigkeiten, sich körperlich anzustrengen (z.B. eine schwere Einkaufstasche oder einen Koffer zu tragen?)</string>
    <string name="a_little">wenig</string>
    <string name="moderate">mäßig</string>
    <string name="very">sehr</string>
    <string name="is_it_difficult_to_have_a_longer_walk">Bereitet es Ihnen Schwierigkeiten, einen längeren Spaziergang zu machen?</string>
    <string name="is_it_difficult_to_a_short_distance_except_outside">Bereitet es Ihnen Schwierigkeiten, eine kurze Strecke außer Haus zu gehen?</string>
    <string name="have_to_lie_in_bed_during_the_day_or_sit_in_an_armchair">Müssen Sie tagsüber im Bett liegen oder in einem Sessel sitzen?</string>
    <string name="need_help_with_eating_dressing_washing_or_using_the_toilet">Brauchen Sie Hilfe beim Essen, Anziehen, Waschen oder Benutzen der Toilette?</string>
    <string name="were_you_at_your_work_limited">Waren Sie bei Ihrer Arbeit oder bei anderen tagtäglichen Beschäftigungen eingeschränkt?</string>
    <string name="were_you_on_your_hobbies_or_others_leisure_activities_restricted">Waren Sie bei Ihren Hobbys oder anderen Freizeitbeschäftigungen eingeschränkt?</string>
    <string name="were_you_short_of_breath">Waren Sie kurzatmig?</string>
    <string name="did_you_have_pain">Hatten Sie Schmerzen?</string>
    <string name="did_you_have_to_rest">Mussten Sie sich ausruhen?</string>
    <string name="did_you_have_sleep_problems">Hatten Sie Schlafstörungen?</string>
    <string name="did_you_feel_weak">Fühlten Sie sich schwach?</string>
    <string name="did_you_have_an_appetite">Hatten Sie Appetitmangel?</string>
    <string name="was_you_sick">War Ihnen übel?</string>
    <string name="have_you_vomited">Haben Sie erbrochen?</string>
    <string name="did_you_have_constipation">Hatten Sie Verstopfung?</string>
    <string name="did_you_have_diarrhea">Hatten Sie Durchfall?</string>
    <string name="were_you_tired">Waren Sie müde?</string>
    <string name="felt_through_pain_in_your_everyday_life_impaired">Fühlten Sie sich durch Schmerzen in Ihrem alltäglichen Leben beeinträchtigt?</string>
    <string name="had_trouble_concentrating_on_something">Hatten Sie Schwierigkeiten, sich auf etwas zu konzentrieren, z.B. auf das Zeitungslesen oder das Fernsehen?</string>
    <string name="did_you_feel_tense">Fühlten Sie sich angespannt?</string>
    <string name="have_you_worried">Haben Sie sich Sorgen gemacht?</string>
    <string name="were_you_irritable">Waren Sie reizbar?</string>
    <string name="did_you_feel_depressed">Fühlten Sie sich niedergeschlagen?</string>
    <string name="did_you_have_trouble_remembering_things">Hatten Sie Schwierigkeiten, sich an Dinge zu erinnern?</string>
    <string name="physical_condition_or_your_medical_treatment_your_family_life_impaired">Hat Ihr körperlicher Zustand oder Ihre medizinische Behandlung Ihr Familienleben beeinträchtigt?</string>
    <string name="physical_condition_or_medical_treatment_compromised_your_cohabitation_with_other_people">Hat Ihr körperlicher Zustand oder Ihre medizinische Behandlung Ihr Zusammensein oder Ihre gemeinsamen Unternehmungen mit anderen Menschen beeinträchtigt?</string>
    <string name="physical_condition_or_your_medical_treatment_financial_difficulties">Hat Ihr körperlicher Zustand oder Ihre medizinische Behandlung für Sie finanzielle Schwierigkeiten mit sich gebracht?</string>
    <string name="how_would_you_rate_your_overall_health_over_the_past_week">Wie würden Sie insgesamt Ihren Gesundheitszustand während der letzten Woche einschätzen?</string>
    <string name="how_would_you_rate_your_overall_quality_of_life_during_the_last_week">Wie würden Sie insgesamt Ihre Lebensqualität während der letzten Woche einschätzen?</string>
    <string name="did_you_feel_unsure_about_the_future">Fühlten Sie sich unsicher in Bezug auf die Zukunft?</string>
    <string name="did_you_feel_that_you_suffered_health_setbacks">Hatten Sie das Gefühl, gesundheitliche Rückschläge erlitten zu haben?</string>
    <string name="were_you_concerned_that_your_famaly_life_could_be_disturbed">Waren Sie besorgt, dass Ihr Familienleben gestört werden könnte?</string>
    <string name="did_you_have_a_headache">Hatten Sie Kopfschmerzen?</string>
    <string name="has_your_attitude_towards_the_future_deteriorated">Hat sich Ihre Einstellung zur Zukunft verschlechtert?</string>
    <string name="have_you_seen_double">Haben Sie doppelt gesehen?</string>
    <string name="have_you_seen_blurry">Haben Sie verschwommen gesehen?</string>
    <string name="did_you_have_trouble_reading">Hatten Sie Schwierigkeiten beim Lesen?</string>
    <string name="did_you_have_seizures">Hatten Sie Anfälle?</string>
    <string name="did_you_have_a_feeling_of_weakness_on_a_body_side">Hatten Sie ein Schwächegefühl auf einer Körperseite?</string>
    <string name="was_it_hard_to_find_the_right_words_to_express_yourself">Bereitete es Ihnen Mühe, die richtigen Worte zu finden, um sich auszudrücken?</string>
    <string name="did_you_have_difficulty_speaking">Hatten Sie Schwierigkeiten beim Sprechen?</string>
    <string name="was_it_hard_for_you_to_share_your_thoughts_with_others">Bereitete es Ihnen Mühe, anderen Ihre Gedanken mitzuteilen?</string>
    <string name="did_you_feel_sleepy_during_the_day">Fühlten Sie sich tagsüber schläfrig?</string>
    <string name="did_you_have_any_coordination_problems">Hatten Sie Koordinationsprobleme?</string>
    <string name="do_you_care_about_your_hair_loss">Machte Ihnen Haarverlust zu schaffen?</string>
    <string name="did_your_skin_hurt">Machte Ihnen Hautjucken zu schaffen?</string>
    <string name="did_you_have_a_feeling_of_weakness_in_both_legs">Hatten Sie ein Schwächegefühl in beiden Beinen?</string>
    <string name="did_you_feel_uncomfortable">Fühlten Sie sich unsicher auf den Beinen?</string>
    <string name="did_you_have_trouble_controlling_your_bladder">Hatten Sie Mühe Ihre Blase zu kontrollieren?</string>
    <string name="very_bad">sehr schlecht</string>
    <string name="very_good">ausgezeichnet</string>
    <string name="title_activity_start_menu">StartMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Benutzername</string>
    <string name="you_already_have">Sie haben bereits</string>
    <string name="x_questions_answered">% aller Fragen beantwortet</string>
    <string name="hadsd_questionnaire">HADS-D Fragebogen</string>
    <string name="nccn_distress_thermometer">Gefühls-Thermometer</string>
    <string name="fear_of_progression_questionnaire">Fragebogen zu Zukunftssorgen</string>
    <string name="quality_of_life_questionnaire">Fragebogen zur Lebensqualität</string>
    <string name="user_statistics">Auswertungen</string>
    <string name="user_start_configuration">Benutzer Konfiguration</string>
    <string name="questionnaire_to_display">Fragebögen, die angezeigt werden sollen</string>
    <string name="ok">Ok</string>
    <string name="cancel">Abbrechen</string>
    <string name="create_new_user">Neuen Benutzer anlegen</string>
    <string name="switch_to_existing_user">Klicke, um einen existierenden Benutzer zu wählen</string>
    <string name="standard_questionnaire">Standard Fragebögen</string>
    <string name="switch_to_questionnaire_selection">Klicke, um benutzerdefinierte Fragebögen auszuwählen</string>
    <string name="configurable_questionnaire">Ausgewählte Fragebögen</string>
    <string name="switch_to_default_selection">Klick, um die Standard Fragebögen auszuwählen</string>
    <string name="select_existing_user">Existierenden Benutzer auswählen</string>
    <string name="switch_to_new_user">Klick, um einen neuen Benutzer auszuwählen</string>
    <string name="placeholder"> </string>
    <string name="configuration">Konfiguration</string>
    <string name="select_qustionnaire_date">Wählen Sie das Umfragedatum</string>
    <string name="create_new_questionnaire_date">neue Umfrage erstellen</string>
    <string name="question">Frage</string>
    <string name="select_user">Wähle einen Patienten aus</string>
    <string name="history">Verlauf</string>
    <string name="anxiety">Angst</string>
    <string name="synchronisation">Benutzer Synchronisieren</string>
    <string name="settings">Einstellungen</string>
    <string name="database_settings">Einstellungen</string>
</resources>