<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_user_start_configuration"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/user_start_configuration" />
        <item
            android:id="@+id/nav_user_statistics"
            android:icon="@drawable/ic_timeline_black_36dp"
            android:title="@string/user_statistics" />
        <item
            android:id="@+id/nav_elastic_synchronisation"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/synchronisation" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_elastic_database"
                android:icon="@drawable/ic_data_setting_black_24dp"
                android:title="@string/database_settings" />
        </menu>
    </item>

</menu>
