<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp">

            <TextView
                android:id="@+id/question_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="20dp"
                android:text="@string/checkbox_description"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textAppearanceLabelLarge" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/question"
            android:layout_margin="30dp">

            <TextView
                android:id="@+id/subtitle_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/practicle_problems"
                android:textSize="@dimen/textAppearanceLabelLarge" />

            <CheckBox
                android:id="@+id/housing_situation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle_label"
                android:layout_margin="10dp"
                android:text="@string/housing_situation"
                android:textSize="@dimen/textAppearanceLabelLarge" />

            <CheckBox
                android:id="@+id/insurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/housing_situation"
                android:layout_margin="10dp"
                android:text="@string/insurance"
                android:textSize="@dimen/textAppearanceLabelLarge" />

            <CheckBox
                android:id="@+id/work_or_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/insurance"
                android:layout_margin="10dp"
                android:text="@string/work_or_school"
                android:textSize="@dimen/textAppearanceLabelLarge" />

            <CheckBox
                android:id="@+id/transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/work_or_school"
                android:layout_margin="10dp"
                android:text="@string/transport"
                android:textSize="@dimen/textAppearanceLabelLarge" />

            <CheckBox
                android:id="@+id/childcare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transport"
                android:layout_margin="10dp"
                android:text="@string/childcare"
                android:textSize="@dimen/textAppearanceLabelLarge" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>