<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_statistics_tabs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.artursworld.nccn.view.statistics.StatisticsTabsActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp" />

    <eu.long1.spacetablayout.SpaceTabLayout
        android:id="@+id/spaceTabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="eu.long1.spacetablayout.SpaceTabLayoutBehavior"
        app:number_of_tabs="four"
        app:icon_one="@drawable/ic_questionnaire_black_24dp"
        app:icon_three="@drawable/ic_questionnaire_black_24dp"
        app:icon_two="@drawable/ic_questionnaire_black_24dp"
        app:icon_four="@drawable/ic_questionnaire_black_24dp"
        app:text_one="@string/hadsd_questionnaire"
        app:text_two="@string/nccn_distress_thermometer"
        app:button_color="@color/colorAccent"
        app:text_three="@string/quality_of_life_questionnaire"
        app:starting_position="one" />


</android.support.design.widget.CoordinatorLayout>
