<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.artursworld.nccn.model.wizard.distressthermometer.FamilyProblemsStep">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/subtitle_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="@dimen/textAppearanceLabelLarge"
            android:text="@string/family_problems"
            />

        <CheckBox
            android:id="@+id/partner_problems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle_label"
            android:layout_margin="10dp"
            android:text="@string/partner_problems"
            android:textSize="@dimen/textAppearanceLabelLarge" />

        <CheckBox
            android:id="@+id/children_problems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/partner_problems"
            android:layout_margin="10dp"
            android:text="@string/children_problems"
            android:textSize="@dimen/textAppearanceLabelLarge" />


    </RelativeLayout>

</ScrollView>
