<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <!-- 1. Title, Subtitle und ToggleBtn -->
        <include
            android:id="@+id/toggle_user_layout"
            layout="@layout/toggle_title_subtitle" />

        <!-- Checkboxes Questionnaires -->
        <RelativeLayout
            android:id="@+id/layout_users"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toggle_user_layout"
            android:visibility="gone">

            <fragment
                android:id="@+id/user_expandable_search_list_fragment"
                android:name="com.artursworld.nccn.view.user.UserExpandableListFragment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/edit_text_holder" />

        </RelativeLayout>

        <!-- Divider / Trennlinie-->
        <View
            android:id="@+id/divide1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/layout_users"
            android:layout_margin="10dp"
            android:background="@color/material_stepper_background" />

        <!-- 2. Title, Subtitle und ToggleBtn-->
        <include
            android:id="@+id/included_questionnaire_title"
            layout="@layout/toggle_title_subtitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divide1" />

        <RelativeLayout
            android:id="@+id/layout_below_included_questionnaire_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/included_questionnaire_title"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/questionnaire_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checked="true"
                android:text="@string/hadsd_questionnaire"
                android:textSize="@dimen/textAppearanceLabel" />

            <CheckBox
                android:id="@+id/questionnaire_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/questionnaire_1"
                android:layout_margin="10dp"
                android:checked="true"
                android:text="@string/nccn_distress_thermometer"
                android:textSize="@dimen/textAppearanceLabel" />

            <CheckBox
                android:id="@+id/questionnaire_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/questionnaire_2"
                android:layout_margin="10dp"
                android:checked="true"
                android:text="@string/quality_of_life_questionnaire"
                android:textSize="@dimen/textAppearanceLabel" />

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>